--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@tailwindcss/vite": "^4.0.9",
+    "firebase": "^11.4.0",
     "lucide-react": "^0.477.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
